# cortex

./: .gitignore  Cargo.toml  README.md
src/: cortex.rs  main.rs  text_formatter.rs
src/claude/: mod.rs  text_formatter.rs
