[package]
name = "cortex"
version = "0.1.0"
edition = "2021"
description = "Command Orchestration and Response Terminal - An intelligent interactive shell powered by AI"
authors = ["Claude <claude@anthropic.com>"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1.0"
async-trait = "0.1"
dotenv = "0.15"
crossterm = "0.26"
rustyline = "12.0"
syntect = "5.0"
regex = "1.5"
tui = { package = "ratatui", version = "0.21.0" }
